RESOLVED FIXED184196
REGRESSION: [ios-simulator] 3 WKWebViewAutofillTests API test failures seen with 11.3 SDK
https://bugs.webkit.org/show_bug.cgi?id=184196
Summary REGRESSION: [ios-simulator] 3 WKWebViewAutofillTests API test failures seen w...
Ryan Haddad
Reported 2018-03-30 15:03:44 PDT
The following API tests fail when run on iOS Simulator using the 11.3 SDK: WKWebViewAutofillTests.StandalonePasswordField WKWebViewAutofillTests.UsernameAndPasswordField WKWebViewAutofillTests.UsernameAndPasswordFieldSeparatedByRadioButton FAIL WKWebViewAutofillTests.StandalonePasswordField /Volumes/Data/slave/ios-simulator-11-debug/build/Tools/TestWebKitAPI/Tests/ios/WKWebViewAutofillTests.mm:178 Value of: [webView stringByEvaluatingJavaScript:@"password.value"] Actual: "" Expected: "famos" FAIL WKWebViewAutofillTests.UsernameAndPasswordField /Volumes/Data/slave/ios-simulator-11-debug/build/Tools/TestWebKitAPI/Tests/ios/WKWebViewAutofillTests.mm:131 Value of: [webView stringByEvaluatingJavaScript:@"password.value"] Actual: "" Expected: "famos" FAIL WKWebViewAutofillTests.UsernameAndPasswordFieldSeparatedByRadioButton /Volumes/Data/slave/ios-simulator-11-debug/build/Tools/TestWebKitAPI/Tests/ios/WKWebViewAutofillTests.mm:150 Value of: [webView stringByEvaluatingJavaScript:@"user.value"] Actual: "" Expected: "frederik" /Volumes/Data/slave/ios-simulator-11-debug/build/Tools/TestWebKitAPI/Tests/ios/WKWebViewAutofillTests.mm:151 Value of: [webView stringByEvaluatingJavaScript:@"password.value"] Actual: "" Expected: "famos"
Attachments
Patch (5.42 KB, patch)
2018-05-04 11:29 PDT, Wenson Hsieh
no flags
Radar WebKit Bug Importer
Comment 1 2018-03-30 15:04:03 PDT
Ryan Haddad
Comment 2 2018-04-04 18:03:47 PDT
Frederik Riedel
Comment 3 2018-04-11 03:59:30 PDT
Any idea what the reason for the test failure in the simulator is in comparison to testing on a real device? I'm not sure why the tests fail there...
Wenson Hsieh
Comment 4 2018-04-11 07:19:33 PDT
(In reply to Frederik Riedel from comment #3) > Any idea what the reason for the test failure in the simulator is in > comparison to testing on a real device? I'm not sure why the tests fail > there... Unsure, as of yet. I'll take a look!
Wenson Hsieh
Comment 5 2018-05-04 11:24:02 PDT
(In reply to Wenson Hsieh from comment #4) > (In reply to Frederik Riedel from comment #3) > > Any idea what the reason for the test failure in the simulator is in > > comparison to testing on a real device? I'm not sure why the tests fail > > there... > > Unsure, as of yet. I'll take a look! Finally took a peek at this. -insertTextSuggestion: requires that the UITextSuggestion is a UITextAutofillSuggestion. However, the UITextAutofillSuggestion @implementation hack in WKWebViewAutofillTests is being used since developer SDKs do not have the private header, so we fail the class check. We no longer need the compatibility hack in WKWebViewAutofillTests since our bots don't run these tests on < iOS 11.3 anymore, so we can just fix these tests by removing it.
Wenson Hsieh
Comment 6 2018-05-04 11:29:32 PDT
WebKit Commit Bot
Comment 7 2018-05-04 11:52:53 PDT
Comment on attachment 339572 [details] Patch Clearing flags on attachment: 339572 Committed r231369: <https://trac.webkit.org/changeset/231369>
WebKit Commit Bot
Comment 8 2018-05-04 11:52:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.