REGRESSION: [ios-simulator] 3 WKWebViewAutofillTests API test failures seen with 11.3 SDK https://bugs.webkit.org/show_bug.cgi?id=184196 <rdar://problem/39054481>

Patch by Wenson Hsieh <whsieh@berkeley.edu> on 2018-05-04
Reviewed by Tim Horton.

Source/WebKit:

Remove an unnecessary call to NSClassFromString, now that trunk WebKit only supports iOS 11.3+.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView insertTextSuggestion:]):

Tools:

Removes some unnecessary workarounds to enable running app autofill tests against iOS versions
earlier than 11.3. Also re-enables these tests.

* TestWebKitAPI/Tests/ios/WKWebViewAutofillTests.mm:
(TestWebKitAPI::TEST):
(-[UITextAutofillSuggestion initWithUsername:password:]): Deleted.
(+[UITextAutofillSuggestion autofillSuggestionWithUsername:password:]): Deleted.

Canonical link: https://commits.webkit.org/200802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231369 268f45cc-cd09-0410-ab3c-d52691b4dbfc